@@ -1,23 +1,20 @@
 package emu.grasscutter.server.packet.send;
 
-import emu.grasscutter.Grasscutter;
-import emu.grasscutter.game.player.Player;
-import emu.grasscutter.game.entity.EntityVehicle;
-import emu.grasscutter.game.props.FightProperty;
-import emu.grasscutter.game.entity.GameEntity;
+import static emu.grasscutter.net.proto.VehicleInteractTypeOuterClass.VehicleInteractType.VEHICLE_INTERACT_OUT;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
+
+import emu.grasscutter.game.entity.EntityVehicle;
+import emu.grasscutter.game.entity.GameEntity;
+import emu.grasscutter.game.player.Player;
+import emu.grasscutter.game.props.FightProperty;
 import emu.grasscutter.net.packet.BasePacket;
 import emu.grasscutter.net.packet.PacketOpcodes;
-
 import emu.grasscutter.net.proto.VehicleMemberOuterClass.VehicleMember;
 import emu.grasscutter.net.proto.VehicleSpawnRspOuterClass.VehicleSpawnRsp;
-
 import emu.grasscutter.utils.Position;
-
-import java.util.List;
-
-
-import static emu.grasscutter.net.proto.VehicleInteractTypeOuterClass.VehicleInteractType.VEHICLE_INTERACT_OUT;
 
 public class PacketVehicleSpawnRsp extends BasePacket {
 
@@ -30,14 +27,12 @@ public class PacketVehicleSpawnRsp extends BasePacket {
 				.filter(entity -> entity instanceof EntityVehicle
 						&& ((EntityVehicle) entity).getGadgetId() == vehicleId
 						&& ((EntityVehicle) entity).getOwner().equals(player))
-				.toList();
+				.collect(Collectors.toList());
 
-		previousVehicles.stream().forEach(entity -> {
-			List<VehicleMember> vehicleMembers = ((EntityVehicle) entity).getVehicleMembers().stream().toList();
+		previousVehicles.forEach(entity -> {
+			List<VehicleMember> vehicleMembers = new ArrayList<>(((EntityVehicle) entity).getVehicleMembers());
 
-			vehicleMembers.stream().forEach(vehicleMember -> {
-				player.getScene().broadcastPacket(new PacketVehicleInteractRsp(((EntityVehicle) entity), vehicleMember, VEHICLE_INTERACT_OUT));
-			});
+			vehicleMembers.forEach(vehicleMember -> player.getScene().broadcastPacket(new PacketVehicleInteractRsp(((EntityVehicle) entity), vehicleMember, VEHICLE_INTERACT_OUT)));
 
 			player.getScene().killEntity(entity, 0);
 		});
@@ -46,7 +41,7 @@ public class PacketVehicleSpawnRsp extends BasePacket {
 
 		switch (vehicleId) {
 			// TODO: Not hardcode this. Waverider (skiff)
-			case 45001001,45001002 -> {
+			case 45001001: case 45001002 : {
 				vehicle.addFightProperty(FightProperty.FIGHT_PROP_BASE_HP, 10000);
 				vehicle.addFightProperty(FightProperty.FIGHT_PROP_BASE_ATTACK, 100);
 				vehicle.addFightProperty(FightProperty.FIGHT_PROP_CUR_ATTACK, 100);
@@ -55,8 +50,9 @@ public class PacketVehicleSpawnRsp extends BasePacket {
 				vehicle.addFightProperty(FightProperty.FIGHT_PROP_CUR_SPEED, 0);
 				vehicle.addFightProperty(FightProperty.FIGHT_PROP_CHARGE_EFFICIENCY, 0);
 				vehicle.addFightProperty(FightProperty.FIGHT_PROP_MAX_HP, 10000);
+				break;
 			}
-			default -> {}
+			default : {break;}
 		}
 
 		player.getScene().addEntity(vehicle);
